Updates from ShareLaTeX

--- a/Hoofdstukken/1-Begrippenlijst.tex
+++ b/Hoofdstukken/1-Begrippenlijst.tex
@@ -17,7 +17,7 @@
 \newglossaryentry{ic}
 {
     name=interne controle,
-    description={Controle door of namens de leiding en toezichthoudende organen op de oordeelsvorming en actviteiten van anderen}
+    description={Controle door of namens de leiding en toezichthoudende organen op de oordeelsvorming en activiteiten van anderen}
 }
 
 \newglossaryentry{lsorganisatie}
@@ -79,5 +79,3 @@
     name=betrouwbaarheidstypologie,
     description={Typologie die per type bedrijf aangeeft welke interne betrouwbaarheidsmaatregelen bij dat bedrijf verwacht kunnen worden. Synoniem voor Starreveld-typologie}
 }
-
-%
