--- a/Hoofdstukken/B-Samenvatting.tex
+++ b/Hoofdstukken/B-Samenvatting.tex
@@ -1,6 +1,6 @@
 \chapter*{{\color{red}Samenvatting}} %Ongenummerd hoofdstuk
 \thispagestyle{empty} %Geen paginanummer deze pagina
-\backgroundsetup{contents=\includegraphics{BGbootAL},angle=0,scale=0.47,opacity=0.50,hshift=-634} %Instellingen voor achtergrondafbeelding
+\backgroundsetup{contents=\includegraphics{BGbootALs},angle=0,scale=0.47,opacity=0.50,hshift=-634} %Instellingen voor achtergrondafbeelding
 \BgThispage %Achtergrond deze pagina
 \lipsum[1-4]
 
