--- a/Hoofdstukken/F-Methode.tex
+++ b/Hoofdstukken/F-Methode.tex
@@ -1,54 +1,32 @@
 \chapter{Methodologie}
 \label{hoofdstuk:methodologie}
-\section{Onderzoeksontwerp}
-Bij dit onderzoek wordt er gebruik gemaakt van methoden die passend zijn om de geformuleerde deelvragen en de hoofdvraag te kunnen beantwoorden. De conclusie van de deelvragen worden gebundeld en geven hiermee antwoord op de centrale hoofdvraag. In dit hoofdstuk wordt vermeld welke modellen zullen bijdragen aan de beantwoording en hoe deze helpen bij de beantwoording. De uitwerking hiervan is per deelvraag. 
+\textbf{De gebruikte methoden zijn passend om voor dit onderzoek de geformuleerde deelvragen en de hoofdvraag te kunnen beantwoorden. Beantwoording van de centrale hoofdvraag gebeurt door de conclusie van de deelvragen te bundelen. Dit hoofdstuk vermeldt welke modellen zullen bijdragen aan de beantwoording en hoe deze helpen bij de beantwoording. De uitwerking hiervan is per deelvraag.}
 
 \bigskip \noindent
 \textbf{Wat zijn de sterke en zwakke punten van de controle-omgeving bij Seafood Connection?} \\
-Zoals eerder besproken in paragraaf \ref{hoofdstuk:theoretischeondersteuning} steunt het volledige interne betrouwbaarheidssyteem op de controle-omgeving. De uitwerking van de controle-omgeving en de bespreking van de resultaten kunnen niet uit een theorieboek gehaald worden. De basis van de controle-omgeving wordt dus onderzocht aan de hand van een \emph{casestudie} (of: \emph{gevalsstudie}). Verder wordt gesteund op een analyse van bestaand materiaal en in mindere door observatie.
+Zoals eerder besproken in paragraaf \ref{hoofdstuk:theoretischeondersteuning} steunt het volledige interne betrouwbaarheidssyteem op de controle-omgeving. De uitwerking van de controle-omgeving en de bespreking van de resultaten kunnen niet uit een theorieboek gehaald worden. De basis van de controle-omgeving wordt dus onderzocht aan de hand van een \emph{casestudie} (of: \emph{gevalsstudie}). Bij een casestudie is er geen sprake van kwantitatief onderzoek doordat er slechts één onderzoeksobject is. Met andere woorden beschrijft de uitwerking van de controle-omgeving de organisatie van SFC als een geheel. Verder wordt gesteund op een analyse van bestaand materiaal door bestudering van de aanwezige AOIB, promotiemateriaal, de website, en handboeken. In mindere mate is het mogelijk om door observeren aanvullende informatie te vergaren. 
+
+\vfill
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{scn281}}
+\end{center}
 
 \bigskip \noindent 
 \textbf{Welke betrouwbaarheidsrisico's zijn te onderkennen bij Seafood Connection?} \\
+Het onderzoeken van de betrouwbaarheidsrisico's vereist een diepgaande kennis van de organisatie. Het is niet nodig om het wiel opnieuw uit te vinden, door bestudering van de bestaande AOIB is het mogelijk om een raamwerk te krijgen van de gevaargebieden binnen de organisatie. Het toetsen van deze risico's aan de werkelijkheid is mogelijk door medewerkers en leidinggevenden te interviewen. Bij deze voorafgaande interviews ligt de focus bij hoe de functie of de desbetreffende afdeling is veranderd ten opzichte van de bestaande AOIB. Hierdoor is het mogelijk om uitspraken te doen over het geheel van de organisatie. Door de organisatie als geheel te typeren wordt opnieuw gebruik gemaakt van de eerdergenoemde casestudie. 
 
-
-analyse van bestaand materiaal
-casestudie
-literatuuronderzoek
-inhoudsanalyse
-observatie
+Overige middelen als theoretische ondersteuning zijn ook een belangrijke pilaar voor de beantwoording. Deze ondersteuning vormt een ruw raamwerk waarin SFC past. Er zijn namelijk AO-gerichte modellen ontwikkeld die verschillende soorten organisaties kunnen typeren. Binnen elke typologie kunnen veel voorkomende aanknopingspunten gehanteerd worden. Het is hierbij wel belangrijk om de theorie te toetsen aan de werkelijkheid door daadwerkelijk na te vragen of de geformuleerde aanknopingspunten ook echt van toepassing zijn op de organisatie.
 
 \bigskip \noindent
 \textbf{Welke preventieve en repressieve maatregelen worden getroffen om de \gls{ic} in stand te houden?} \\
-inkoopcontracten
-
-analyse van bestaand materiaal
-enquete
-literatuuronderzoek
-inhoudsanalyse
-observatie
+Door medewerkers te interviewen is het mogelijk om in kaart te brengen welke maatregelen er getroffen worden om de risico's te verminderen. Tijdens deze gesprekken wordt er op basis van ja/nee vragen de aanwezigheid van kritieke elementen van het betrouwbaarheidssysteem getest. Hier is opzettelijk gekozen om de ja/nee vragen te presenteren als een interview in plaats van enquête. De reden hiervoor is omdat de geïnterviewde het gevoel heeft een conversatie te hebben met de interviewer. De stilten in het gesprek worden gebruikt door de geïnterviewde om de materie nader toe te lichten. Hier kan slim op ingespeeld worden door door te vragen op de gegeven informatie. Hiermee kan effectief het gebrek of de aanwezigheid van maatregelen worden gevraagd. Het opstellen van de vragenlijst komt uit de typologieën uit theoretisch vooronderzoek en de bestaande AOIB. Eventuele onduidelijkheden of gebreken hierin worden diepgaand gevraagd van de geïnterviewde. 
 
 \bigskip \noindent
 \textbf{Welke maatregelen zijn getroffen om er voor te zorgen dat er voldoende informatie en communicatie is binnen de organisatie?} \\
+Het beantwoorden van deze deelvraag is mogelijk door het analyseren van de antwoorden in interviews van managers en leidinggevenden. De vastgelegde rapportagelijnen zijn het duidelijkst en het meest doordringend bij degene die een afdeling moeten sturen. Het is hun verantwoordelijkheid om het presteren van de afgelopen periode te verantwoorden en om vooruit te kijken om samen een beleid te formuleren voor de komende periode. Wanneer deze personen aangeven dat er communicatie ontbreekt of onnodig is kan dit worden vastgelegd in de formele AOIB of meegenomen worden als advies om te verbeteren. 
 
-analyse van bestaand materiaal
-open interview
-inhoudsanalyse
-observatie
+In de huidige AOIB staat ook het een en ander over de informatie en communicatie, ook hier is het waardevol om te zien of deze overeenkomt met de werkelijkheid. Bij de interviews die hiervoor gehouden worden, wordt niet aan het eerdere ja/nee format gehouden. Hier wordt gebruik gemaakt van een open interview met vragen op basis van de beschikbare informatie die voor het interview voorhanden is. Er wordt begonnen bij de laagste niveaus van leidinggevenden om op deze manier de antwoorden van de interviews te gebruiken bij de andere interviews. Op deze manier kan er verdiepend worden doorgevraagd.
 
 \bigskip \noindent
 \textbf{Hoe wordt er voor gezorgd dat het interne betrouwbaarheidssysteem regelmatig geëvalueerd en gemonitord wordt?} \\
-
-inhoudsanalyse
-analyse van bestaand materiaal
-open interview
-observatie
-
-Bij het verantwoorden van je ontwerp geef je aan welke dataverzamelingsmethode je gekozen hebt en op basis van welke argumenten dit is gebeurd. Zet de beperkingen en mogelijkheden op een rij; denk hierbij niet alleen aan de methodologische argumenten, maar ook aan omstandigheden als tijd, geld etc.
- Soort: field- dan wel deskresearch
- Methode: enquête, observatie, documentenanalyse e.d.
-Bespreek de randvoorwaarden (de praktische mogelijkheden en beperkingen).
-
-\section{Dataverzameling}
- Uitwerken van de gekozen methode: welke meetinstrumenten zijn gebruikt, met welk doel, waarom? Hierbij wordt de techniek bedoeld om een begrip te meten. Dit kan bijvoorbeeld een vraag of een stelling zijn. Je wilt de begrippen uit je inleiding omzetten naar meetbare eenheden. De begrippen worden dus geoperationaliseerd. De gebruikte lijst van vragen of stellingen voeg je als bijlage bij je rapport.
- Welke deelnemers namen deel aan je onderzoek: je beschrijft hier je onderzoeksgroep. Heb je bijvoorbeeld interviews gehouden, dan beschrijf je uit welke groep de geïnterviewden afkomstig zijn en hoe je hen benaderd hebt.
- Hoe is de dataverzameling verlopen: je beschrijft welke stappen je hebt genomen om tot je resultaten te komen.
+Het onderzoeken van de monitoring wordt gerealiseerd door middel van bestaand materiaal door te nemen op eventuele formele vastlegging van het evaluatieproces. De dataverzameling zal grotendeels van het managementteam zelf komen. Bij deze interviews krijgen de leidinggevenden de mogelijkheid om aan de interviewer uit te leggen hoe de werknemers beoordeeld worden, hoe er periodiek terug wordt gekeken op de effectiviteit van organisatorische maatregelen, maar ook hoe deze worden bijgesteld om het voor de komende periode te verbeteren. Tijdens deze interviews wordt er gelet op de aanwezigheid van de Deming-cirkel. Hiermee wordt bedoeld of er een proces binnen de organisatie bestaat waarin continu wordt gepland, uitgevoerd, geëvalueerd, en gecorrigeerd. Deze informatie zal op de voorgrond treden door open interview en door observatie binnen de organisatie.
