--- a/Hoofdstukken/G3-organisatorischemaatregelen.tex
+++ b/Hoofdstukken/G3-organisatorischemaatregelen.tex
@@ -1,3 +1,55 @@
+\textbf{Bij het inrichten van de organisatie hoort een logisch geselecteerd stelsel van organisatorische maatregelen. Deze maatregelen zijn bedoeld om de betrouwbaarheidrisico's te mitigeren of de kans op het gebeuren te reduceren. Er zijn een aantal omgangsmethoden voor de risicobedreigingen \citep{financiering}. Afhankelijk van de situatie, de aard van het risico, de kans, en de impact is het mogelijk om te gaan met de risico's in de vorm van:
+\begin{itemize}
+    \item Preventie. Wanneer de aard, kans en impact het toelaat om het risico te voorkomen of de kans van het laten gebeuren te verminderen;
+    \item Repressie. Beperking van de schade wanneer de risicobedreiging dreigt te gebeuren;
+    \item Acceptatie. Wanneer bijvoorbeeld de impact en de kans van het risico laag zijn is het raadzaam om de focus elder te leggen en het risico te accepteren;
+    \item Verzekeren. Wanneer een risico een hoge impact heeft maar een zeer lage kans is het raadzaam om zich in te laten dekken door verzekering. \citep{bivpraktijk}
+\end{itemize}
+}
+
+\noindent
+Het COSO-raamwerk presenteert een kader waarin de maatregelen vorm kunnen krijgen. Verder wordt duidelijk dat alle aangeboden principes hier worden gebruikt.
+
+\begin{table}[!h]
+    \centering
+    \caption{Excerpt van de principes voor interne controle volgens COSO}
+    \begin{tabular}{l l}
+        \toprule
+        \textbf{Element} & \textbf{Principe} \\
+        \midrule
+        Control activaties & 10. Selecteert en ontwikkelt controlemaatregelen \\
+         & die risico mitigeren \\
+         & 11. Selecteert en ontwikkelt technologische maatregelen \\
+         & 12. Gebruikt controlemaatregelen door beleid \\
+         & en procedure \\
+        \bottomrule
+    \end{tabular}
+    \label{tab:maatrprincipes}
+\end{table}
+
+In een goed intern betrouwbaarheidssysteem worden risico's die voldoende impact hebben en voldoende vaak voorkomen, opgevangen door een daarbij passend stelsel van interne controlemaatregelen. Dit stelsel van interne controlemaatregelen is te vinden in tabel \ref{tab:icmaatregelen}. Analyse van de doeltreffendheid van de AOIB benodigd onderzoek van de toereikendheid van de maatregelen van interne controle. Ook het toetsen van de effectiviteit van deze maatregelen voor de eerder beschreven betrouwbaarheidsrisico's hoort hier bij. \citep{bivperspectief} 
+
+\newpage
+\noindent
+Daarbij wordt er op de volgende manier te werk gegaan:
+
+\begin{enumerate}
+    \item Er wordt bepaald voor de organisatie als geheel en de daarbij horende bedrijfsprocessen welke maatregelen van interne controle gangbaar zijn door kennis te nemen van het theoretisch kader;
+    \item Er wordt daarbij toegevoegd de opzichten waarin de organisatie en de daarbij horende bedrijfsprocessen afwijkend zijn;
+    \item Er wordt een directe lijn getrokken van de geïdentificeerde risico's naar hoe deze behandeld worden door de organisatorische maatregelen.
+\end{enumerate}
+
+Het typeren van de verschillende bedrijfsactiviteiten komt voor in de boeken van \citet{bivperspectief} en \citet{bivpraktijk}. De voor dit onderzoek relevante typologie \emph{Handelsbedrijf op rekening} wordt in deze boeken uiteengezet. De belangrijkste aanknopingspunten voor de volledigheid van de opbrengsten en de juistheid van de kosten zijn voor deze typologie en dus ook voor SFC:
+
+\begin{itemize}
+    \item Door de directie geautoriseerde brutomarge en een vastgelegde prijsprocedure;
+    \item Functiescheiding tussen inkoop (beschikkend), voorraad (bewarend), verkoop (beschikkend), en administratie (registrerend en controlerend);
+    \item De verbandscontrole: beginvoorraad + inkopen - eindvoorraad = verkochte goederen;
+    \item Inventarisatie als sluitstuk van de \gls{geldgoederen}.
+\end{itemize}
+
+\noindent
+Verder worden er maatregelen toegepast die vallen onder de volgende soorten:
 \begin{table}[h]
     \centering
     \caption{Het stelsel van maatregelen van \gls{ic} \citep{bivpraktijk}}
@@ -13,5 +65,76 @@
         Inrichting van de administratie \\
         \bottomrule
     \end{tabular}
-    \label{tab:icmaatregelen2}
+    \label{tab:icmaatregelen}
 \end{table}
+
+\newpage
+
+\subsection{Betrouwbaarheidsrisico's en de organisatietypologie}
+De voornaamste betrouwbaarheidsrisico's voor handelsbedrijven op rekening zijn: verschuivingsgevaar van perioden met een hoge prijs voor visproducten naar perioden met een lage prijs, juistheid van de verstrekte verkoopkortingen, volledigheid van de genoten inkoopkortingen, en de oninbaarheid van de debiteuren. Deze risico's worden niet door een enkele maatregel opgelost. In plaats daarvan is er een omvangrijk stelsel van maatregelen die ieder bijdragen aan het functioneren. Eén van deze maatregelen is een door de verkoopmanager geautoriseerde prijslijst van het assortiment vanuit de afdeling Wholesale. De afdeling Wholesale is geografisch opgedeeld. Dit betekent dat de respectievelijke verkoopmanagers die hun eigen territorium benaderen, wekelijks een prijslijst genereren die verstuurd wordt naar de klanten. Deze prijslijst komt tot stand door onderling overleg tussen de afdelingen in de waardeketen. Op basis van marktontwikkelingen, de geautoriseerde brutomarge, de voorcalculatorische verkoopkosten, en de kostprijzen komt de voorwaardelijke verkoopprijs tot stand. Deze procedure verschilt per verkoopkanaal. Retail is bijvoorbeeld een andere afzetmethode waarbij er voor elke inkoop een (langlopend) verkoopcontract aan kan worden gekoppeld. In dit geval wordt er na afstemming met de klant een prijsopgave gedaan voor de inkopen, deze worden in een standaard format gezet waarbij verkoopkosten en overhead mee worden gerekend. De hierbij berekende prijs is een startpunt voor de onderhandelingen tussen verkoop en de afnemende partij. Zo zijn er vaste prijsprocedures in plaats voor alle afzetkanalen en alle verkoopafdelingen. \citep{aoibsfc}
+
+Er is een sterkere functiescheiding binnen SFC dan ooit tevoren. Afdelingen zijn organisatorisch afgeschermd door het takenpakket onder de medewerkers duidelijk in te delen. Dit blijkt onder andere uit het uitbesteden van de voorraadbewaring door derden. Op deze manier is er niet een persoon binnen de onderneming die zichzelf zou kunnen verrijken door middelen te onttrekken uit de onderneming. Om nu middelen te onttrekken is beduidend meer moeite nodig en moeten er meer mensen betrokken worden. Ook de ingevoerde general controls helpen bij het vergroten van de functiescheiding. Door het gebruik van het Exact softwarepakket is het mogelijk om rollen en rechten toe te wijzen aan de verschillende gebruikers. Zo kunnen de verkopers tot een bepaalde limiet per afnemer verkopen goedkeuren, de administrators kunnen alleen bij de dagboeken die nodig zijn voor de dagelijkse mutaties, etc. De general control is vergaand en er kan op basis van functie wordt autorisatie toegekend voor het gebruik van bepaalde applicaties en functies binnen de software. Een medewerker Verkoop kan derhalve niet in de gedeelde server mappen van de Financiële Administratie. Eerder is ook vastgesteld dat medewerkers soms gebruikerswachtwoorden uitwisselen. Dit is expliciet niet toegestaan, hoewel verder niet gehandhaafd. Iedere medewerker mag zelf een wachtwoord aanmaken van minimaal 6 karakters. Na 180 dagen dient men dit wachtwoord te wijzigen. Het nieuwe wachtwoord mag niet lijken op de voorgaande. Het wachtwoord is persoonlijk en niet opvraagbaar. In de softwarepakketten wordt geregistreerd wie er wanneer toegang tot het netwerk gekregen heeft en, voor zover de verschillende gebruikersapplicaties dat toelaten, wie welke activiteiten heeft uitgevoerd. \citep{aoibsfc}
+
+Binnen de afdeling Finance is een toegewijd team dat alle transacties nauwlettend monitort. Dit betekent ook dat er periodieke cijferbeoordelingen en verbandscontroles worden uitgevoerd. Deze controles zijn niet alleen eigen gemoedsrust, het is ook een rapportagemiddel richting het Japanse moederbedrijf. De financiële administratie bestaat derhalve uit een groepscontroller, meerdere controllers, administrateurs, en een treasurer. \citep{aoibsfc} 
+
+Ten slotte dragen de verschillende subafdelingen binnen Verkoop maandelijks zorg voor de controle van de voorraad bij de externe Coldstores (binnen- en buitenland). De voorraadpositie wordt dan opgevraagd bij de agenten en/of Coldstores. Deze worden vergeleken met de voorraadpositie in Exact. Verschillen worden uitgezocht en indien nodig gecorrigeerd. \citep{aoibsfc} 
+
+Samenvattend wordt het voornaamste betrouwbaarheidrisico (genummerd met `1' in figuur \ref{fig:risicos}) getackeld door een uitgebreid stelsel van maatregelen. In tabel \ref{tab:maatregelen} komt bondig een aantal maatregelen voorbij om deze grootste bedreiging te reduceren of te voorkomen.
+
+\newpage
+
+\begin{table}[h!]
+    \centering
+    \caption{Het stelsel van maatregelen van \gls{ic} van SFC \citep{aoibsfc}}
+    \begin{tabular}{l l}
+        \toprule
+        \textbf{Preventief} & \textbf{Uitwerking} \\
+        \midrule
+        Begrotingen, normen, & - Jaarlijkse forecasts voor alle afzonderlijke \\
+        en tarieven & verkoopafdelingen \\
+         & - Een kostprijsbestand waarin actuele prijzen \\
+         & voorhanden zijn \\
+        Functiescheiding &  - Duidelijke en vastgelegde takenverdeling \\
+         & - Voorraadbewaring bij derden \\
+        Procedures en richtlijnen & - Vastgelegde prijsprocedures per verkoopkanaal \\
+         & door verkoopmanagers \\
+         & - Wet- en regelgeving ten aanzien van het \\
+         & registreren, verwerken, en verschepen van \\
+         & visproducten \\ 
+        Beveiliging van waarden & - Camera's en beveiligingssystemen \\
+        & - Gesloten magazijnen met explicite toestemming \\
+        Preventieve IT-controls & - General en Application controls door vergaande \\
+         & maatregelen in Exact als beveiligde omgeving en \\
+         & beschermde wachtwoorden \\
+         & - De gedeelde server mappen bevatten een \\
+         & rechtenstructuur op basis van functie \\
+        Inrichting van de & - De aanwezigheid en het gebruik van het inkoop-,\\
+        administratie & artikel-, voorraad-, crediteuren-, verkoop-, \\
+        & en debiteurenbestand \\
+        & - Vereiste fiattering voor betaling \\
+        \midrule
+        \textbf{Repressief} & \textbf{Uitwerking} \\
+        \midrule
+        Cijferbeoordeling & - Overeenstemming van aanwezige voorraden  \\
+        & met geregistreerde voorraden \\
+        & - Werkelijke brutomarge versus de begrote \\
+        & brutomarge per productgroep, per markt, en \\
+        & per seizoen \\
+        Verbandscontroles & - Beginvoorraad + inkopen - eindvoorraad \\
+        & - bederf = kostprijs verkopen \\
+        & - Kostprijs verkopen + brutomarge = omzet \\
+        Detailcontroles & - Juistheid inkoopprijzen en verkoopkortingen \\
+        & - Volledigheid verkoopprijzen en inkoopkortingen \\
+        Waarneming ter plaatse & - Maandelijkse voorraad rapportage Coldstores\\
+        Repressieve IT-controls & - Er wordt geregistreerd wie er wanneer toegang \\
+        & tot het netwerk gekregen heeft en welke \\
+        & activiteiten er plaats vonden \\
+        \bottomrule
+    \end{tabular}
+    \label{tab:maatregelen}
+\end{table}
+
+\newpage
+
+\subsection*{Conclusie}
+Ten behoeve van de primaire waardeketen worden een groot aantal maatregelen getroffen. Deze dragen bij om de betrouwbaarheidsrisico's in te perken of te mitigeren. De samenloop van maatregelen hebben met name een invloed op de meest bedreigende risico's die geïdentificeerd zijn bij de risico analyse. De vraag herrijst of de organisatie meegaand genoeg is om de ontwikkelingen van de onderneming te volgen. 
