--- a/Hoofdstukken/Z-Bijlagen.tex
+++ b/Hoofdstukken/Z-Bijlagen.tex
@@ -3,8 +3,9 @@
 \addcontentsline{toc}{chapter}{Bijlagen}
 
 \stepcounter{bijlage}
-\subsection*{\hypertarget{bij:treasury}{Bijlage \thebijlage}: \gls{treasury} in kaart gebracht}
+\subsection*{Bijlage \thebijlage: \gls{treasury} in kaart gebracht}
 \addcontentsline{toc}{section}{Bijlage \thebijlage: treasury in kaart gebracht}
+\label{bij:treasury}
 \begin{figure}[!hb]
     \centering
     \includegraphics[angle=90,width=0.795\textwidth]{treasury}
@@ -13,8 +14,8 @@
 
 \newpage
 \stepcounter{bijlage}
-\subsection*{\hypertarget{bij:inkoopproces}{Bijlage \thebijlage}: het inkoopproces (onder voorbehoud)}
-\addcontentsline{toc}{section}{Bijlage \thebijlage: het inkoopproces (onder voorbehoud)}
+\subsection*{\hypertarget{bij:inkoopproces}{Bijlage \thebijlage}: het inkoopproces}
+\addcontentsline{toc}{section}{Bijlage \thebijlage: het inkoopproces}
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=1\textwidth]{inkoopproces}
@@ -23,14 +24,31 @@
 
 \newpage
 \stepcounter{bijlage}
+\subsection*{\hypertarget{bij:organisatiepers}{Bijlage \thebijlage}: organisatiestructuur SFC}
+\addcontentsline{toc}{section}{Bijlage \thebijlage: organisatiestructuur SFC}
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[angle=90,width=0.725\textwidth]{organogrampersoneel}
+\end{figure}
+
+\newpage
+\stepcounter{bijlage}
 \subsection*{\hypertarget{bij:treasury}{Bijlage \thebijlage}: de \gls{treasuryletter}}
 \addcontentsline{toc}{section}{Bijlage \thebijlage: de treasury letter}
 Zie ommezijde. {\color{red}Alleen de eerste twee pagina's nu.}
-\includepdf[pages={1-2}]{../Bronnen/treasury.pdf}
+\vfill
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{scn255}}
+\end{center}
+\includepdf[pages={1-2}]{../Bronnen/Treasury_letter.pdf}
 
 \newpage
 \stepcounter{bijlage}
 \subsection*{\hypertarget{bij:aoib}{Bijlage \thebijlage}: AOIB beschrijving Seafood Connection}
 \addcontentsline{toc}{section}{Bijlage \thebijlage: AOIB beschrijving Seafood Connection}
-Zie ommezijde. {\color{red}Alleen de eerste twee pagina's nu.}
+Zie ommezijde.
+\vfill
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{scn271}}
+\end{center}
 \includepdf[pages={1-2}]{../Bronnen/aoib.pdf}
