--- a/Titelpagina/Definities.tex
+++ b/Titelpagina/Definities.tex
@@ -1,5 +1,5 @@
-\def\titel{Het interne betrouwbaarheidssysteem en haar invloeden op de toepassing van hedge accounting}
-\def\ondertitel{Bachelor afstudeeropdracht over de toepassing van de AO/IB bij de primaire processen van Seafood Connection B.V. om in het kader van hedge accounting de treasuryfunctie te vervullen}
+\def\titel{De AO / IB van Seafood Connection en de invloeden hiervan op de toepassing van hedge accounting}
+\def\ondertitel{Afstudeerscriptie over de toepassing van het interne betrouwbaarheidssysteem bij de primaire processen van Seafood Connection B.V. om in het kader van hedge accounting de treasuryfunctie te vervullen}
 
 \def\auteur{Gerrit Post}
 \def\studentklas{S1071236 --- AC4V}
@@ -20,7 +20,7 @@
 
 \def\voecode{ACvAFST.1819}
 \def\perjaar{najaar 2018}
-\def\datum{7 januari 2019}
+\def\datum{9 januari 2019}
 \def\plaats{Urk}
 
 \def\vertspace{0.5cm}
