--- a/Titelpagina/omslag.tex
+++ b/Titelpagina/omslag.tex
@@ -26,6 +26,7 @@
 
 \begin{document}
 \begin{titlepage}
+%\backgroundsetup{contents=Concept,opacity=0.25}
 %\backgroundsetup{contents=\includegraphics{3},angle=0,scale=0.15,opacity=0.5,vshift=195}
 %\backgroundsetup{contents=\includegraphics{2},angle=90,scale=0.27,opacity=0.5}
 %\backgroundsetup{contents=\includegraphics{5},angle=0,scale=0.19,opacity=1,vshift=-400}
@@ -49,14 +50,13 @@
     \thedate, \plaats \\
     
     \vspace{\vertspace}
+    \organisatie \\
+    \mailorganisatie \\
+%   \telorganisatie \\
+    
+    \vspace{\vertspace}
     \school \\
     \domein \\
-
-    \vspace{\vertspace}
-    Eerste begeleider: \begeleidereen \\
-    Tweede begeleider: \begeleidertwee \\
-    \organisatie \\
-
 \end{titlepage}
 %Titelpagina
 
