--- a/Titelpagina/titelpagina.tex
+++ b/Titelpagina/titelpagina.tex
@@ -12,6 +12,8 @@
 \usepackage[linktoc=all]{hyperref}
 \hypersetup{colorlinks=false} %Links naar websites, bronnen, inhoudsopgave, pagina's etc.
 
+\usepackage[pages=some]{background}
+
 \usepackage[a4paper, margin=2.5cm]{geometry}
 
 \usepackage{titling} %Titels voor op de titelpagina
@@ -24,6 +26,8 @@
 
 
 \begin{document}
+%\backgroundsetup{contents=Concept,opacity=0.25}
+%\BgThispage
 \begin{titlepage}
     \vspace*{-0.9cm}
     \hfill
