--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -118,7 +118,7 @@
     title = {{Beroepspecifieke competenties}},
     year = {2018},
     author = {{Windesheim Community}},
-    url = {https://communities.windesheim.nl/std/Accountancy-voltijd/Documenten%20stage%20en%20afstuderen%20AC/Beroepspecifieke%20competenties.pdf}
+    url = {https://communities.windesheim.nl/std/Accountancy-voltijd/Documenten\%20stage\%20en\%20afstuderen\%20AC/Beroepspecifieke\%20competenties.pdf}
 }
 
 @techreport{COSOsummery,
