--- a/Hoofdstukken/C-Inleiding.tex
+++ b/Hoofdstukken/C-Inleiding.tex
@@ -1,6 +1,11 @@
 \chapter*{Inleiding} %Ongenummerd hoofdstuk
 \addcontentsline{toc}{chapter}{Inleiding} %Ongenummerde chapters komen niet in de ToC, met deze code wel
-Deze afstudeeropdracht geeft antwoord op de vraag hoe de \gls{ic} is ingericht bij Seafood Connection te Urk en hoe deze gebruikt kan worden om op een verantwoorde en navolgbare wijze om te gaan met de beschikbare geldmiddelen in het kader van hedge accounting. In samenwerking met de finance afdeling en het management van Seafood Connection B.V. (hierna als afkorting: SFC) is kritisch gekeken naar de inrichting van de bestaande AOIB. 
+Deze afstudeeropdracht geeft antwoord op de vraag hoe de \gls{ic} is ingericht bij Seafood Connection te Urk en hoe deze gebruikt kan worden om op een verantwoorde en navolgbare wijze om te gaan met de beschikbare geldmiddelen in het kader van hedge accounting. Hedge accounting in deze context is het nemen van maatregelen om de volatiliteit van de financiële middelen in te perken. Hedge accounting brengt veel compliance met zich mee, waaronder documentatie van de hedge verhoudingen en de maatregelen die hiervoor preventief en repressief genomen worden. Om deze verhoudingen uit te werken is in samenwerking met de finance afdeling en het management van Seafood Connection B.V. (hierna als afkorting: SFC) kritisch gekeken naar de inrichting van de bestaande AOIB. In de AOIB staat het stelsel van maatregelen die de organisatie treft en dus kan er op basis van deze documentatie een zogenaamde treasury letter gemaakt worden. Hierin legt het management  verantwoording af over het beleid, de bevoegdheden, verantwoordelijkheden, toezichtmaatregelen én de sturing ten opzichte van de financiële vermogenswaarden.
 
 Om de lezer een goed beeld te geven van de opdrachtomgeving is eerst beknopt de bedrijfsachtergrond beschreven. 
 Deze dient als context voor hoofdstuk \ref{hoofdstuk:probleemanalyse} waarin de centrale probleemstelling is beschreven. Vervolgens is de methodiek voor het onderzoek uitgewerkt in hoofdstuk \ref{hoofdstuk:methodologie}. De resultaten die gevonden zijn aan de hand van het onderzoek komen aan de orde in hoofdstuk \ref{hoofdstuk:resultaten}. De gevormde conclusie en verdere bespreking van deze resultaten is te vinden in hoofdstuk \ref{hoofdstuk:conclusie} waarin ook de centrale hoofdvraag beantwoord is. Als slot vindt u de bronnenlijst, en de bijlagen die verdiepend bedoeld zijn voor deze rapportage. 
+
+\vfill
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{scn201}}
+\end{center}
