--- a/Hoofdstukken/H-Conclusie.tex
+++ b/Hoofdstukken/H-Conclusie.tex
@@ -1,2 +1,23 @@
 \chapter{Conclusie}
 \label{hoofdstuk:conclusie}
+\lipsum[1-7]
+\vfill
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{img050}}
+\end{center}
+
+\begin{comment}
+
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[trim={0.25cm 0.45cm 0cm 0.9cm},clip,width=1.1\paperwidth]{img156}}
+\end{center}
+
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[trim={0cm 1.05cm 0cm 0.6cm},clip,width=1.1\paperwidth]{scn250}}
+\end{center}
+
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[trim={0.2cm 0.4cm 0cm 0.8cm},clip,width=1.1\paperwidth]{img052}}
+\end{center}
+
+\end{comment}
